💄 add telp style

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           <br />
           Jl. HR. Soebrantas - Pekanbaru
         </address>
-        <h4>Telp: 0852 7120 4577</h4>
+        <a class="telp" href="tel:0852 7120 4577">Telp: 0852 7120 4577</h4>
       </div>
       <div
         id="carouselExampleInterval"
