✨ add meta for url preview

--- a/index.html
+++ b/index.html
@@ -5,6 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Soto Padang Pulau Aia 1976</title>
+
+    <!-- url preview metas -->
+    <!-- Primary Meta Tags -->
+    <title>Soto Padang Pulau Aia 1976</title>
+    <meta name="title" content="Soto Padang Pulau Aia 1976">
+    <meta name="description" content="Soto Padang Pulau Aia 1976">
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pulauaia1976.com">
+    <meta property="og:title" content="Soto Padang Pulau Aia 1976">
+    <meta property="og:description" content="Soto Padang Pulau Aia 1976">
+    <meta property="og:image" itemprop="image" content="https://pulauaia1976.com/images/slide2.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pulauaia1976.com">
+    <meta property="twitter:title" content="Soto Padang Pulau Aia 1976">
+    <meta property="twitter:description" content="Soto Padang Pulau Aia 1976">
+    <meta property="twitter:image" content="https://pulauaia1976.com/images/slide2.jpg">
+
+
     <!-- CSS only -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
