✏️ update address numba typo

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </h1>
         <h2>Spesial Daging dan Paru</h2>
         <address>
-          Ruko Panam Centre Blok B No. 29
+          Ruko Panam Centre Blok B No. 2b
           <br />
           Jl. HR. Soebrantas - Pekanbaru
         </address>
