--- a/index.html
+++ b/index.html
@@ -44,15 +44,39 @@
     <link rel="stylesheet" href="/css/reset.css" />
     <link rel="stylesheet" href="/css/styles.css" />
 
-    <!-- JavaScript Bundle with Popper -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+    <!-- lightbox -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css"
+      integrity="sha512-Velp0ebMKjcd9RiCoaHhLXkR1sFoCCWXNp6w4zj1hfMifYB5441C+sKeBl/T/Ka6NjBiRfBBQRaQq65ekYz3UQ=="
       crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.6/dist/umd/popper.min.js"
+      integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/js/bootstrap.min.js"
+      integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"
+      integrity="sha512-Y2IiVZeaBwXG1wSV7f13plqlmFOx8MdjuHyYFVoYzhyRr3nH/NMDjTBSswijzADdNzMyWNetbLMfOpIPl6Cv9g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
     ></script>
   </head>
   <body>
-    <div class="carousel-wrapper">
+    <div class="carousel-wrapper" data-ride="carousel">
       <div class="carousel-splash" id="splashImage">
         <img
           class="carousel-splashImage"
@@ -75,50 +99,257 @@
         <a class="telp" href="tel:0852 7120 4577">Telp: 0852 7120 4577</a>
       </div>
       <div
-        id="carouselExampleInterval"
+        id="carouselExampleControls"
         class="carousel slide"
-        data-bs-ride="carousel"
+        data-ride="carousel"
       >
         <div class="carousel-inner">
-          <div class="carousel-item active" data-bs-interval="5000">
+          <div class="carousel-item active">
             <div class="carousel-background carousel-background--1"></div>
           </div>
-          <div class="carousel-item" data-bs-interval="5000">
+          <div class="carousel-item">
             <div class="carousel-background carousel-background--2"></div>
           </div>
-          <div class="carousel-item" data-bs-interval="5000">
+          <div class="carousel-item">
             <div class="carousel-background carousel-background--3"></div>
           </div>
         </div>
-        <button
+        <a
           class="carousel-control-prev"
-          type="button"
-          data-bs-target="#carouselExampleInterval"
-          data-bs-slide="prev"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="prev"
         >
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button
+
+        </a>
+        <a
           class="carousel-control-next"
-          type="button"
-          data-bs-target="#carouselExampleInterval"
-          data-bs-slide="next"
+          href="#carouselExampleControls"
+          role="button"
+          data-slide="next"
         >
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+
+        </a>
+      </div>
+    </div>
+    <div class="row justify-content-center m-3">
+      <h1 class="display-3">Gallery Foto</h1>
+      <div class="row">
+        <a
+          href="./images/gallery/g-1.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-1.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-10.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-2.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-3.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-3.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-4.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-4.JPG" class="img-fluid aspect1" />
+        </a>
+
+        <a
+          href="./images/gallery/g-5.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-5.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-6.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-6.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-7.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-7.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-8.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-8.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-10.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-10.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-11.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-11.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-12.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-12.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-13.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-13.JPG" class="img-fluid aspect1" />
+        </a>
+
+        <a
+          href="./images/gallery/g-14.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-14.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-15.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-15.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-16.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-16.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-17.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-17.JPG" class="img-fluid aspect1" />
+        </a>
+
+        <a
+          href="./images/gallery/g-18.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-18.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-19.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-19.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-20.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-20.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-21.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-21.JPG" class="img-fluid aspect1" />
+        </a>
+
+        <a
+          href="./images/gallery/g-22.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-22.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-23.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-23.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-24.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-24.JPG" class="img-fluid aspect1" />
+        </a>
+        <a
+          href="./images/gallery/g-25.JPG"
+          data-toggle="lightbox"
+          data-gallery="example-gallery"
+          class="col-6 col-sm-3"
+        >
+          <img src="./images/gallery/g-25.JPG" class="img-fluid aspect1" />
+        </a>
       </div>
     </div>
   </body>
   <script>
     const splashImage = document.querySelector("#splashImage");
     const TIMEOUT = 5000;
-    const deleteSplashImage = setTimeout(() => {
-      splashImage.remove()
-    }, TIMEOUT);
     document.addEventListener("DOMContentLoaded", () => {
-      deleteSplashImage();
+      const deleteSplashImage = setTimeout(() => {
+        splashImage.remove();
+      }, TIMEOUT);
+    });
+  </script>
+
+  <script>
+    $(document).on("click", '[data-toggle="lightbox"]', function (event) {
+      event.preventDefault();
+      $(this).ekkoLightbox();
     });
   </script>
 </html>
