🐛 fix aspect-ratio issue with using .gallery-image

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-1.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-1.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-10.JPG"
@@ -151,7 +151,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-2.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-2.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-3.JPG"
@@ -159,7 +159,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-3.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-3.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-4.JPG"
@@ -167,7 +167,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-4.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-4.JPG" class="gallery-image" />
         </a>
 
         <a
@@ -176,7 +176,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-5.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-5.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-6.JPG"
@@ -184,7 +184,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-6.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-6.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-7.JPG"
@@ -192,7 +192,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-7.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-7.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-8.JPG"
@@ -200,7 +200,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-8.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-8.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-10.JPG"
@@ -208,7 +208,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-10.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-10.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-11.JPG"
@@ -216,7 +216,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-11.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-11.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-12.JPG"
@@ -224,7 +224,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-12.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-12.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-13.JPG"
@@ -232,7 +232,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-13.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-13.JPG" class="gallery-image" />
         </a>
 
         <a
@@ -241,7 +241,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-14.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-14.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-15.JPG"
@@ -249,7 +249,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-15.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-15.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-16.JPG"
@@ -257,7 +257,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-16.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-16.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-17.JPG"
@@ -265,7 +265,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-17.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-17.JPG" class="gallery-image" />
         </a>
 
         <a
@@ -274,7 +274,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-18.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-18.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-19.JPG"
@@ -282,7 +282,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-19.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-19.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-20.JPG"
@@ -290,7 +290,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-20.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-20.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-21.JPG"
@@ -298,7 +298,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-21.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-21.JPG" class="gallery-image" />
         </a>
 
         <a
@@ -307,7 +307,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-22.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-22.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-23.JPG"
@@ -315,7 +315,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-23.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-23.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-24.JPG"
@@ -323,7 +323,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-24.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-24.JPG" class="gallery-image" />
         </a>
         <a
           href="./images/gallery/g-25.JPG"
@@ -331,7 +331,7 @@
           data-gallery="example-gallery"
           class="col-6 col-sm-3"
         >
-          <img src="./images/gallery/g-25.JPG" class="img-fluid aspect1" />
+          <img src="./images/gallery/g-25.JPG" class="gallery-image" />
         </a>
       </div>
     </div>
